kubernetes-networks/canary/http-svc-deploy-canary.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: echo-production

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-svc-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc-canary
  template:
    metadata:
      labels:
        app: http-svc-canary
    spec:
      containers:
      - name: http-svc-canary
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: http-svc-canary
  labels:
    app: http-svc-canary
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc-canary
