kubernetes-networks/canary/http-svc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: echo.local
    http:
      paths:
      - path: /canary
        backend:
          serviceName: http-svc-prod
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: echo.local
    http:
      paths:
      - path: /canary
        backend:
          serviceName: http-svc-canary
          servicePort: 80
